# Arkhos

./: .gitignore  CLAUDE.md  CURSOR.md  GEMINI.md  LICENSE  MCP.md  README.md  VIBE_SETUP_SUMMARY.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  pyproject.toml  test_pipeline.py
backend/arkhos/: __init__.py  app.py  auth.py  config.py  intelligence.py  iterate.py  pipeline.py  rate_limit.py  routes.py  sanitize.py  sse.py  store.py  user_routes.py  waitlist.py
backend/arkhos/data/: __init__.py  design_intelligence.py
backend/arkhos/generation/: __init__.py  sandbox_executor.py
backend/arkhos/integrations/: magic_mcp.py
backend/arkhos/prompts/: __init__.py  architect.py  builder.py  designer.py  planner.py  reviewer.py
backend/arkhos/sandbox/: __init__.py  client.py  ports.py
backend/arkhos/skills/: __init__.py
backend/arkhos/skills/builder/: accessibility.md  framer-motion.md  mcp-integration.md  performance.md  react-patterns.md  shadcn.md  tailwind.md
backend/arkhos/skills/designer/: eu-design.md  taste.md  typography.md
backend/arkhos/skills/planner/: copywriting.md  marketing.md  seo.md
backend/arkhos/skills/reviewer/: code-quality.md  security.md
backend/arkhos/skills/shared/: cost-routing.md  eu-gdpr.md  mistral-prompting.md  parallel-processing.md
backend/arkhos/templates/: __init__.py
backend/scripts/: generate_training_data.py  integration_test.py
backend/tests/: __init__.py  test_adaptive_budget.py  test_auth.py  test_intelligence.py  test_ports.py  test_smoke.py
backend/training_data/: results.json
(+279 files in other folders)
